objects/APL_Filter__c.object
<CustomObject>
    <description>APL Filter object is used to store the filters created by the admin for team view</description>
    <fields>
        <fullName>APL_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APL Filter</label>
        <referenceTo>APL_Filter__c</referenceTo>
        <relationshipLabel>APL Filters</relationshipLabel>
        <relationshipName>APL_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for fields bundle together</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Category</fullName>
                </value>
                <value>
                    <fullName>Forecast Category</fullName>
                </value>
                <value>
                    <fullName>Time Dimensions</fullName>
                </value>
                <value>
                    <fullName>Product Dimensions</fullName>
                </value>
                <value>
                    <fullName>Sales Dimensions</fullName>
                </value>
                <value>
                    <fullName>Other Dimensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Clause_SOQL__c</fullName>
        <label>Default Clause SOQL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_by_Parent_value__c</fullName>
        <label>Display by Parent value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Values_Soql__c</fullName>
        <label>Domain Values Soql</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Values__c</fullName>
        <description>domain values for specific field</description>
        <label>Domain Values</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reqired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reqired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppy_Forecast_Label_Name__c</fullName>
        <label>Oppy Forecast Label Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Params_Mapping__c</fullName>
        <label>Params Mapping</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Result Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>APL Filter</label>
    <nameField>
        <displayFormat>FILTER-{00000000}</displayFormat>
        <label>APL Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APL Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>